--- a/btools/templates/base.html
+++ b/btools/templates/base.html
@@ -14,35 +14,36 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-0 py-md-0">
       <a class="navbar-brand" href="#">B Tools</a>
-      <div class="collapse navbar-collapse">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'rss-index' %}">Home</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-item nav-link" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Apps
-              <i class="fas fa-chevron-down"></i>
-            </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="bd-versions">
-              <a class="dropdown-item" href="{% url 'rss-index' %}">RSS</a>
-            </div>
-          </li>
-        </ul>
-      </div>
-    </nav> <!-- End Nav -->
-    <form class="my-1 w-50">
-      <div class="input-group">
-        <div class="input-group-prepend">
-          <span class="input-group-text"><i class="fas fa-search"></i></span>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <form class="my-1 ml-5 w-50">
+        <div class="input-group">
+          <div class="input-group-prepend">
+            <span class="input-group-text"><i class="fas fa-search"></i></span>
+          </div>
+          <input class="form-control search" type="text" id="search-bar" placeholder="<HELP> for explanation"
+            autocomplete="off" spellcheck="false" autocorrect="off" />
         </div>
-        <input class="form-control search" type="text" id="search-bar" placeholder="<HELP> for explanation"
-          autocomplete="off" spellcheck="false" autocorrect="off" />
-      </div>
-    </form>
+      </form>
+      <ul class="navbar-nav ml-5">
+        <li class="nav-item">
+            <a class="nav-item nav-link" href="#">Home</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-item nav-link" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Apps
+            <i class="fas fa-chevron-down"></i>
+          </a>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="bd-versions">
+            <a class="dropdown-item" href="{% url 'rss-index' %}">RSS</a>
+          </div>
+        </li>
+      </ul>
+    </nav> <!-- End Nav -->
   </header>
 
-  <main>
+  <main class="mt-1">
     {% block content %}
     {% endblock %}
   </main>
@@ -50,9 +51,8 @@
   <!-- Footer -->
   <footer class="bc-footer font-small pt-4 my-1">
     <!-- Footer Links -->
-    <div class="container-fluid text-center text-md-left">
-    </div>
-    <!-- Footer Links -->
+    <div class="container-fluid text-center text-md-left"></div>
+
     <!-- Copyright -->
     <div class="footer-copyright text-center my-4">
       <a href="https://buihanotes.com">© 2019 Copyright: Bui Ha, Ltd</a>
