--- a/rss/static/rss.css
+++ b/rss/static/rss.css
@@ -83,3 +83,38 @@ span {
     padding-left: 30px !important;
     background: #343a40;
 }
+
+
+.table-fixed tbody {
+    height: 300px;
+    overflow-y: auto;
+    width: 100%;
+}
+
+.table-fixed thead,
+.table-fixed tbody,
+.table-fixed tr,
+.table-fixed td,
+.table-fixed th {
+    display: block;
+}
+
+.table-fixed tbody td,
+.table-fixed tbody th,
+.table-fixed thead > tr > th {
+    float: left;
+    position: relative;
+    &::after {
+        content: '';
+        clear: both;
+        display: block;
+    }
+}
+
+#rss-app .table-fixed tbody tr {
+    cursor: zoom-in;
+}
+
+#rss-app .table-fixed tbody tr.feed-unread {
+    font-weight: bold;
+}
