Complete RSS app. Adjust layout and some minor views

--- a/hash/templates/hash.html
+++ b/hash/templates/hash.html
@@ -160,7 +160,7 @@
       },
 
       generateRandomSalt: function () {
-        let salt = window.crypto.getRandomValues(new Uint8Array(this.saltLength));
+        var salt = window.crypto.getRandomValues(new Uint8Array(this.saltLength));
         this.saltText = Utils.bytes2base64(salt);
       },
     },
