--- a/btools/templates/base.html
+++ b/btools/templates/base.html
@@ -6,6 +6,7 @@
   {% load static %}
   <link rel="stylesheet" href="{% static "bootstrap/css/bootstrap.min.css" %}">
   <link rel="stylesheet" href="{% static "fontawesome-5.10.2/css/all.css" %}">
+  <link rel="stylesheet" href="{% static "base.css" %}">
   <script type="text/javascript" src="{% static "jquery-3.4.1.min.js" %}"></script>
   <script type="text/javascript" src="{% static "bootstrap/js/bootstrap.bundle.min.js" %}"></script>
 </head>
@@ -13,7 +14,7 @@
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-0 py-md-0">
-      <a class="navbar-brand" href="#">B Tools</a>
+      <a class="navbar-brand" href="/">B Tools</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -50,16 +51,12 @@
   </main>
 
   <!-- Footer -->
-  <footer class="bc-footer font-small pt-4 my-1">
-    <!-- Footer Links -->
-    <div class="container-fluid text-center text-md-left"></div>
-
+  <footer class="font-small my-0 p-2">
     <!-- Copyright -->
-    <div class="footer-copyright text-center my-4">
+    <div class="footer-copyright text-center">
       <a href="https://buihanotes.com">© 2019 Copyright: Bui Ha, Ltd</a>
     </div>
     <!-- Copyright -->
-
   </footer> <!-- Footer -->
 
 </body>
