--- a/rss/static/rss.css
+++ b/rss/static/rss.css
@@ -47,14 +47,12 @@ span {
 .sidebar a, a:hover, a:focus {
     color: inherit;
     text-decoration: none;
-    transition: all 0.3s;
 }
 
 .sidebar {
     /* don't forget to add all the previously mentioned styles here too */
     background: #343a40;
     color: #fff;
-    transition: all 0.3s;
     top: 0;
 }
 
@@ -69,7 +67,7 @@ span {
 }
 
 .sidebar ul li a:hover {
-    color: #7386D5;
+    color: #343a40;
     background: #fff;
 }
 
@@ -119,8 +117,20 @@ span {
     font-weight: bold;
 }
 
+#rss-app .table-fixed tbody tr.feed-chosen td {
+    background: orange;
+    color: #fff;
+}
+
+
 div.card div.card-header {
     background: #343a40;
     color: #fff;
     font-weight: bold;
+}
+
+div.card div.card-body div.card-text {
+    height: 400px;
+    overflow-y: auto;
+    min-height: 400px;
 }
