--- a/btools/static/base.css
+++ b/btools/static/base.css
@@ -1,3 +1,13 @@
+.wrapper {
+    width: 100%;
+    align-items: stretch;
+}
+
+.wrapper-sidebar {
+    display: flex;
+    width: 100%;
+    align-items: stretch;
+}
 
 footer {
     color: #fff;
