--- a/btools/templates/base.html
+++ b/btools/templates/base.html
@@ -13,12 +13,14 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-0 py-md-0">
-      <a class="navbar-brand" href="/">B Tools</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-0">
+      <a class="navbar-brand" href="/">
+        <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" class="d-block" viewBox="0 0 612 612" role="img" focusable="false"><title>Bootstrap</title><path fill="currentColor" d="M510 8a94.3 94.3 0 0 1 94 94v408a94.3 94.3 0 0 1-94 94H102a94.3 94.3 0 0 1-94-94V102a94.3 94.3 0 0 1 94-94h408m0-8H102C45.9 0 0 45.9 0 102v408c0 56.1 45.9 102 102 102h408c56.1 0 102-45.9 102-102V102C612 45.9 566.1 0 510 0z"></path><path fill="currentColor" d="M196.77 471.5V154.43h124.15c54.27 0 91 31.64 91 79.1 0 33-24.17 63.72-54.71 69.21v1.76c43.07 5.49 70.75 35.82 70.75 78 0 55.81-40 89-107.45 89zm39.55-180.4h63.28c46.8 0 72.29-18.68 72.29-53 0-31.42-21.53-48.78-60-48.78h-75.57zm78.22 145.46c47.68 0 72.73-19.34 72.73-56s-25.93-55.37-76.46-55.37h-74.49v111.4z"></path></svg>
+      </a>
+      <button class="navbar-toggler mt-1" type="button" data-toggle="collapse" data-target="#navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <i class="fa fa-bars"></i>
       </button>
-      <form class="my-1 ml-5 w-50">
+      <form class="w-50">
         <div class="input-group">
           <div class="input-group-prepend">
             <span class="input-group-text"><i class="fas fa-search"></i></span>
@@ -27,25 +29,25 @@
             autocomplete="off" spellcheck="false" autocorrect="off" />
         </div>
       </form>
-      <ul class="navbar-nav ml-5">
-        <li class="nav-item">
-            <a class="nav-item nav-link" href="/">Home</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-item nav-link" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Apps
-            <i class="fas fa-chevron-down"></i>
-          </a>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="bd-versions">
-            <a class="dropdown-item" href="{% url 'rss-index' %}">RSS</a>
-            <a class="dropdown-item" href="{% url 'hash-index' %}">Hash</a>
-          </div>
-        </li>
-      </ul>
+      <div class="navbar-collapse collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item dropdown">
+            <a class="nav-item nav-link" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Apps
+              <i class="fas fa-chevron-down"></i>
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="bd-versions">
+              <a class="dropdown-item" href="{% url 'rss-index' %}">RSS</a>
+              <a class="dropdown-item" href="{% url 'hash-index' %}">Hash</a>
+              <a class="dropdown-item" href="{% url 'stock-index' %}">Stock</a>
+            </div>
+          </li>
+        </ul>
+      </div>
     </nav> <!-- End Nav -->
   </header>
 
-  <main class="mt-1">
+  <main>
     {% block content %}
     {% endblock %}
   </main>
