--- a/stock/templates/stock-base.html
+++ b/stock/templates/stock-base.html
@@ -20,7 +20,7 @@
           <i class="fas fa-chevron-down"></i>
         </a>
         <div class="dropdown-menu dropdown-menu-left" aria-labelledby="bd-versions">
-          <a class="dropdown-item" href="{% url 'stock-upload-company' %}">Upload Company</a>
+          <a class="dropdown-item" href="{% url 'stock-company-upload' %}">Upload Company</a>
         </div>
       </li>
     </ul>
