--- a/btools/templates/base.html
+++ b/btools/templates/base.html
@@ -40,6 +40,7 @@
               <a class="dropdown-item" href="{% url 'rss-index' %}">RSS</a>
               <a class="dropdown-item" href="{% url 'hash-index' %}">Hash</a>
               <a class="dropdown-item" href="{% url 'stock-index' %}">Stock</a>
+              <a class="dropdown-item" href="{% url 'task-index' %}">Task</a>
             </div>
           </li>
         </ul>
