Add Icon + Add django_tables2

--- a/stock/templates/index.html
+++ b/stock/templates/index.html
@@ -2,51 +2,8 @@
 
 {% block subcontent %}
 {% load widget_tweaks %}
-{% load static %}
-<link rel="stylesheet" href="{% static "stock.css" %}">
+{% load django_tables2 %}
 
-<table class="table table-sm">
-  <thead class="thead-dark">
-    <tr>
-      <th scope="col">Company Name</th>
-      <th scope="col">Quote</th>
-      <th scope="col">Industry</th>
-      <th scope="col">Index Share</th>
-    </tr>
-  </thead>
-  <tbody>
-    {% for company in companies %}
-    <tr >
-      <td>
-        <a href="{% url 'stock-company-detail' company.quote %}">{{ company.name }}</a>
-      </td>
-      <td>{{ company.quote }}</td>
-      <td>{{ company.industry }}</td>
-      <td>{{ company.summary }}</td>
-    </tr>
-    {% endfor %}
-  </tbody>
-</table>
+{% render_table table %}
 
-<ul class="pagination pagination-sm">
-  {% if companies.has_previous %}
-  <li class="page-item"><a class="page-link" href="?page={{ companies.previous_page_number }}">&laquo;</a></li>
-  {% else %}
-  <li class="page-item disabled"><span>&laquo;</span></li>
-  {% endif %}
-
-  {% for i in companies.paginator.page_range %}
-  {% if companies.number == i %}
-  <li class="page-item active"><span class="page-link">{{ i }} <span class="sr-only">(current)</span></span></li>
-  {% else %}
-  <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
-  {% endif %}
-  {% endfor %}
-
-  {% if companies.has_next %}
-  <li class="page-item"><a class="page-link" href="?page={{ companies.next_page_number }}">&raquo;</a></li>
-  {% else %}
-  <li class="page-item disabled"><span>&raquo;</span></li>
-  {% endif %}
-</ul>
 {% endblock %}
