--- a/btools/templates/base.html
+++ b/btools/templates/base.html
@@ -4,6 +4,7 @@
 <head>
   <title>B tools</title>
   {% load static %}
+  <link rel="shortcut icon" type="image/png" href="{% static "favicon-16x16.png" %}"/>
   <link rel="stylesheet" href="{% static "bootstrap/css/bootstrap.min.css" %}">
   <link rel="stylesheet" href="{% static "fontawesome-5.10.2/css/all.css" %}">
   <link rel="stylesheet" href="{% static "base.css" %}">
