--- a/btools/templates/base.html
+++ b/btools/templates/base.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
   <link rel="stylesheet" href="{% static "base.css" %}">
-  <script type="text/javascript" src="{% static "jquery-3.4.1.min.js" %}"></script>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </head>
@@ -43,9 +43,17 @@
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="bd-versions">
               <a class="dropdown-item" href="{% url 'rss-index' %}">RSS</a>
-              <a class="dropdown-item" href="{% url 'hash-index' %}">Hash</a>
               <a class="dropdown-item" href="{% url 'stock-index' %}">Stock</a>
               <a class="dropdown-item" href="{% url 'task-index' %}">Task Management</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-item nav-link" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Utilities
+              <i class="fas fa-chevron-down"></i>
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="bd-versions">
+              <a class="dropdown-item" href="{% url 'hash-index' %}">Hash</a>
             </div>
           </li>
         </ul>
