--- a/rss/static/rss/rss.css
+++ b/rss/static/rss/rss.css
@@ -11,6 +11,10 @@
     color: #fff;
 }
 
+#rss-app .table-filter a {
+    margin: 5px 5px 0 0;
+}
+
 
 div.card div.card-header {
     background: #343a40;
